--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
 	"name": "Codespace Main",		
 	"dockerFile": "Dockerfile",
 	"postCreateCommand": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
+	
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},	
@@ -9,6 +10,16 @@
 		"vscode": {
 			"settings": {
 				"terminal.integrated.defaultProfile.linux": "bash"
+			},
+			"tasks": {
+				"label": "Google Cloud Login",
+				"type": "shell",
+				"command": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
+				"group": {
+					"kind": "build",
+					"isDefault": true
+				}
+
 			},
 			"extensions": [
 			"mhutchie.git-graph",
