--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Codespace Main",		
 	"dockerFile": "Dockerfile",
-	// "postCreateCommand": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
+	"postCreateCommand": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
 	
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
@@ -11,16 +11,16 @@
 			"settings": {
 				"terminal.integrated.defaultProfile.linux": "bash"
 			},
-			"tasks": {
-				"label": "Google Cloud Login",
-				"type": "shell",
-				"command": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
-				"group": {
-					"kind": "build",
-					"isDefault": true
-				}
+			// "tasks": {
+			// 	"label": "Google Cloud Login",
+			// 	"type": "shell",
+			// 	"command": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
+			// 	"group": {
+			// 		"kind": "build",
+			// 		"isDefault": true
+			// 	}
 
-			},
+			// },
 			"extensions": [
 			"mhutchie.git-graph",
 			"phil294.git-log--graph",			
