--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Codespace Main",		
 	"dockerFile": "Dockerfile",
-	"postCreateCommand": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
+	"postStartCommand": "chmod u+x .devcontainer/postCreate.sh && .devcontainer/postCreate.sh",
 	
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
