--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
 	"name": "Codespace Main",		
-	"dockerFile": "Dockerfile",	
+	"dockerFile": "Dockerfile",
+	"postCreateCommand": "chmod +x /.devcontainer/postCreate.sh && /.devcontainer/postCreate.sh",	
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},	
