--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Codespace Main",		
 	"dockerFile": "Dockerfile",
-	"postCreateCommand": "chmod +x gcloud-login.sh && echo 'Execute ./gcloud-login.sh to login to GCP' ",
+	"postCreateCommand": "chmod +x gcloud-login.sh",
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},	
